--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "first-angular-app",
+  "name": "c8angular",
   "version": "0.0.0",
-  "homepage": "https://github.com/bdfinlayson/first-angular-app",
+  "homepage": "https://github.com/NSS-Cohort-8/myfirstangularapp",
   "authors": [
-    "Bryan Finlayson <bdfinlayson@gmail.com>"
+    "Scott <scott@sscotth.io>"
   ],
   "license": "MIT",
   "ignore": [
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "bootstrap": "~3.3.2",
+    "angular-route": "~1.3.14"
   }
 }
